<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".SurveyActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 1. Kérdés -->
        <TextView
            android:id="@+id/textgreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduction"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subhead1"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton1a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1a" />

            <RadioButton
                android:id="@+id/radioButton1b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1b" />
        </RadioGroup>

        <!--2. Kérdés-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton2a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2a" />

            <RadioButton
                android:id="@+id/radioButton2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2b" />

            <RadioButton
                android:id="@+id/radioButton2c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2c" />

            <RadioButton
                android:id="@+id/radioButton2d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2d" />
            <RadioButton
                android:id="@+id/radioButton2e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2e" />

            <RadioButton
                android:id="@+id/radioButton2f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2f" />
        </RadioGroup>

        <!--3. kérdés-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnermajor3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <!--android:entries="@array/majors" android:prompt="Válaszon szakot!" -->

        <!--Elöadások-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subhead2"
            android:textSize="18sp" />
        <!--4. kérdés-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/fourth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton4a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4a" />

            <RadioButton
                android:id="@+id/radioButton4b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4b" />

            <RadioButton
                android:id="@+id/radioButton4c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4c" />

            <RadioButton
                android:id="@+id/radioButton4d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4d" />
        </RadioGroup>

        <!--5. kérdés-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/fifth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton5a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5a" />

            <RadioButton
                android:id="@+id/radioButton5b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5b" />

            <RadioButton
                android:id="@+id/radioButton5c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5c" />

            <RadioButton
                android:id="@+id/radioButton5d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5d" />
        </RadioGroup>

        <!--6. kérdés-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6"
            android:textSize="18sp" />

        <CheckBox android:id="@+id/checkbox6a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6a"/>

        <CheckBox android:id="@+id/checkbox6b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6b"/>

        <CheckBox android:id="@+id/checkbox6c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6c"/>

        <CheckBox android:id="@+id/checkbox6d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6d"/>

        <!--7. kérdés-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/seventh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton7a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7a" />

            <RadioButton
                android:id="@+id/radioButton7b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7b" />

            <RadioButton
                android:id="@+id/radioButton7c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7c" />

            <RadioButton
                android:id="@+id/radioButton7d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7d" />

            <RadioButton
                android:id="@+id/radioButton7e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7e" />
        </RadioGroup>

        <!--Gyakorlatok-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subhead3"
            android:textSize="18sp" />
        <!--8. kérdés-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question8"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/eighth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton8a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question8a" />

            <RadioButton
                android:id="@+id/radioButton8b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question8b" />

            <RadioButton
                android:id="@+id/radioButton8c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question8c" />

            <RadioButton
                android:id="@+id/radioButton8d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question8d" />
        </RadioGroup>

        <!--9. kérdés-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question9"
            android:textSize="18sp" />

        <CheckBox android:id="@+id/checkbox9a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question9a"/>

        <CheckBox android:id="@+id/checkbox9b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question9b"/>

        <CheckBox android:id="@+id/checkbox9c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question9c"/>

        <CheckBox android:id="@+id/checkbox9d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question9d"/>

        <!--10. kérdés-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question10"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/tenth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton10a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question10a" />

            <RadioButton
                android:id="@+id/radioButton10b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question10b" />

            <RadioButton
                android:id="@+id/radioButton10c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question10c" />

            <RadioButton
                android:id="@+id/radioButton10d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question10d" />
            <RadioButton
                android:id="@+id/radioButton10e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question10e" />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/buttonsend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="send"
                android:layout_marginEnd="40dp"
                android:text="@string/send" />
            <Button
                android:id="@+id/buttonsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setkerdoiv"
                android:layout_marginEnd="40dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/buttoncancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancel"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
